--- a/public/styles.css
+++ b/public/styles.css
@@ -7,8 +7,32 @@
 .sidebar{
     width: 160px;
     height: 100vh;
-    border-right: 2px solid #D3D3D3;
+    border-right: 1px solid #D3D3D3;
     align-items: flex-end;
+}
+
+/* Profile Box */
+.profile-box{
+    display: "inline-flex";
+    flex-direction: "column";
+    padding: 12px 16px 0 16px;
+    position: relative;
+    border-bottom: 1px solid #D3D3D3;
+}
+
+.profile-box-image{
+    position: absolute;
+    bottom: 146px;
+}
+
+.profile-box-btn{
+    display: flex;
+    justify-content: flex-end;
+    height: 68px;
+}
+
+.profile-box-info{
+    margin-top: 12px;
 }
 
 /* Searchbar */
@@ -19,7 +43,9 @@
     border-radius: 30px;
     background-color: rgb(247, 249, 249);
     padding: 12px;
-    box-shadow: 0 0 5px 0 #00000022;
+    margin-bottom: 12px;
+    height: 48px;
+    /* box-shadow: 0 0 5px 0 #00000022; */
 }
 
 .searchIcon{
@@ -32,7 +58,7 @@
     display: flex;
     border: none;
     outline: none;
-    font-size: larger;
+    font-size: large;
     width: 280px;
     background-color: rgb(247, 249, 249);
 }
@@ -42,15 +68,11 @@
     display: inline-flex;
     border-radius: 16px;
     background-color: rgb(247, 249, 249);
-    box-shadow: 0 0 5px 0 #00000022;
-}
-
-.explore-panel h5{
-    margin: 0;
+    /* box-shadow: 0 0 5px 0 #00000022; */
 }
 
 .explore-panel-item{
-    padding: 12px 16px;
+    padding: 10px 16px;
     display: flex;  
     flex-direction: row;
     align-items: center;
@@ -67,15 +89,29 @@
 }
 
 /* Generics */
-.circle-img{
-    width: 54px;
-    height: 54px;
-}
+/* .circle-img{
+    width: 49px;
+    height: 49px;
+} */
 
 .follow-button{
     outline: none;
-    padding: 8px 18px;
+    border: none;
+    padding: 4px 16px;
     background-color: rgb(39, 44, 48);
     color: white;
     border-radius: 40px;
+}
+
+.edit-profile-button{
+    outline: none;
+    background-color: #fff;
+    border: 0.9px solid #D3D3D3;
+    border-radius: 20px;
+    padding: 0 16px;
+    height: 35px;
+}
+
+.edit-profile-button:hover{
+    background-color: rgb(233, 232, 232);
 }
