--- a/public/styles.css
+++ b/public/styles.css
@@ -7,7 +7,7 @@
 .sidebar{
     width: 160px;
     height: 100vh;
-    border-right: 1px solid #D3D3D3;
+    border-right: 0.9px solid #D3D3D3;
     align-items: flex-end;
 }
 
@@ -17,7 +17,7 @@
     flex-direction: "column";
     padding: 12px 16px 0 16px;
     position: relative;
-    border-bottom: 1px solid #D3D3D3;
+    border-bottom: 0.9px solid #D3D3D3;
 }
 
 .profile-box-image{
@@ -78,14 +78,14 @@
     align-items: center;
     background-color: rgb(247, 249, 249);
     border: none;
-    margin: 6px;
+    margin: 2px;
 }
 
 .explore-panel-item-content{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 242px;
+    width: 262px;
 }
 
 /* Generics */
@@ -94,12 +94,11 @@
     height: 49px;
 } */
 
-.follow-button{
+.general-button{
     outline: none;
     border: none;
     padding: 4px 16px;
-    background-color: rgb(39, 44, 48);
-    color: white;
+    height: 32px;
     border-radius: 40px;
 }
 
