--- a/public/styles.css
+++ b/public/styles.css
@@ -5,10 +5,12 @@
 
 /* Sidebar */
 .sidebar{
-    width: 160px;
+    min-width: 160px;
     height: 100vh;
-    border-right: 0.9px solid #D3D3D3;
+    border-right: 0.9px solid rgb(211, 211, 211, 0.3);
     align-items: flex-end;
+    position: fixed;
+    z-index: 1;
 }
 
 /* Profile Box */
@@ -17,7 +19,8 @@
     flex-direction: "column";
     padding: 12px 16px 0 16px;
     position: relative;
-    border-bottom: 0.9px solid #D3D3D3;
+    border-bottom: 0.9px solid rgb(211, 211, 211, 0.3);
+    border-right: 0.9px solid rgb(211, 211, 211, 0.3);
 }
 
 .profile-box-image{
@@ -45,6 +48,7 @@
     padding: 12px;
     margin-bottom: 12px;
     height: 48px;
+    margin-top: 5px;
     /* box-shadow: 0 0 5px 0 #00000022; */
 }
 
@@ -105,7 +109,7 @@
 .edit-profile-button{
     outline: none;
     background-color: #fff;
-    border: 0.9px solid #D3D3D3;
+    border: 0.9px solid rgb(211, 211, 211, 0.3);
     border-radius: 20px;
     padding: 0 16px;
     height: 35px;
