--- a/src/components/Feed/TweetArea.css
+++ b/src/components/Feed/TweetArea.css
@@ -1,5 +1,5 @@
 .tweet-area{
     padding: 10px 16px 2px 16px;
-    border-bottom: 0.9px solid #D3D3D3;
-    border-right: 0.9px solid #D3D3D3;
+    border-bottom: 0.9px solid rgb(211, 211, 211, 0.3);
+    border-right: 0.9px solid rgb(211, 211, 211, 0.3);
 }
