--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,8 +1,16 @@
-.header{
-    width: 100%;
-    padding: 10px 18px 32px 18px;
+.header {
     position: sticky;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    height: 90px;
+    padding: 10px 18px 32px 18px;
+    backdrop-filter: blur(5px);
     background-color: rgb(255, 255, 255, 0.9);
-    border-bottom: .9px solid #D3D3D3;
-    border-right: .9px solid #D3D3D3;
+    border-bottom: .9px solid rgb(211, 211, 211, 0.3);
+    border-right: .9px solid rgb(211, 211, 211, 0.3);
+}
+
+.header p{
+    font-size: small;
 }
