--- a/public/styles.css
+++ b/public/styles.css
@@ -5,32 +5,35 @@
 
 /* Sidebar */
 .sidebar{
-    min-width: 160px;
-    height: 100vh;
     border-right: 0.9px solid rgb(211, 211, 211, 0.3);
-    align-items: flex-end;
+    height: 100vh;
+    min-width: 160px;
     position: fixed;
     z-index: 1;
 }
 
 /* Profile Box */
 .profile-box{
+    border-bottom: 0.9px solid rgb(211, 211, 211, 0.3);
+    border-right: 0.9px solid rgb(211, 211, 211, 0.3);
     display: "inline-flex";
     flex-direction: "column";
     padding: 12px 16px 0 16px;
     position: relative;
-    border-bottom: 0.9px solid rgb(211, 211, 211, 0.3);
-    border-right: 0.9px solid rgb(211, 211, 211, 0.3);
+}
+
+.profile-box-bg{
+    height: 200px;
+    background-color: rgb(207, 217, 222);
+    width: 100%;
 }
 
 .profile-box-image{
-    position: absolute;
     bottom: 146px;
+    position: absolute;
 }
 
 .profile-box-btn{
-    display: flex;
-    justify-content: flex-end;
     height: 68px;
 }
 
@@ -40,81 +43,62 @@
 
 /* Searchbar */
 .searchbar{
-    display: inline-flex;
-    width: 360px;
-    align-items: center;
-    border-radius: 30px;
-    background-color: rgb(247, 249, 249);
-    padding: 12px;
-    margin-bottom: 12px;
-    height: 48px;
-    margin-top: 5px;
     /* box-shadow: 0 0 5px 0 #00000022; */
-}
-
-.searchIcon{
-    align-items: center;
-    padding-left: 12px;
-    margin-right: 14px;
+    border-radius: 30px;
+    height: 48px;
+    margin-bottom: 12px;
+    padding: 12px;
+    width: 100%;
 }
 
 .searchbar input{
-    display: flex;
     border: none;
     outline: none;
-    font-size: large;
-    width: 280px;
-    background-color: rgb(247, 249, 249);
 }
 
 /* Explore Panel */
 .explore-panel{
-    display: inline-flex;
-    border-radius: 16px;
-    background-color: rgb(247, 249, 249);
     /* box-shadow: 0 0 5px 0 #00000022; */
+    border-radius: 16px;
 }
 
 .explore-panel-item{
-    padding: 10px 16px;
-    display: flex;  
-    flex-direction: row;
-    align-items: center;
-    background-color: rgb(247, 249, 249);
     border: none;
-    margin: 2px;
+    padding: 10px 16px;
 }
 
 .explore-panel-item-content{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     width: 262px;
 }
 
 /* Generics */
-/* .circle-img{
-    width: 49px;
-    height: 49px;
-} */
-
 .general-button{
-    outline: none;
     border: none;
-    padding: 4px 16px;
-    height: 32px;
     border-radius: 40px;
+    height: 32px;
+    outline: none;
+    padding: 4px 14px;
 }
 
 .edit-profile-button{
-    outline: none;
     background-color: #fff;
-    border: 0.9px solid rgb(211, 211, 211, 0.3);
+    border: 0.9px solid rgb(211, 211, 211, 0.5);
     border-radius: 20px;
-    padding: 0 16px;
     height: 35px;
+    outline: none;
+    padding: 0 16px;
 }
 
 .edit-profile-button:hover{
     background-color: rgb(233, 232, 232);
+}
+
+/* Utilities */
+.bgc-white{
+    background-color: rgb(247, 249, 249);
+}
+
+.anchor{
+    text-decoration: none;
+    color: rgb(83, 100, 113);
 }
