--- a/src/components/Feed/Tweet.css
+++ b/src/components/Feed/Tweet.css
@@ -17,5 +17,6 @@
     border: 0.9px solid rgb(211, 211, 211, 0.3);
     border-radius: 16px;
     margin: 12px 0;
+    overflow: auto;
     text-align: center;
 }
