--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,7 +8,7 @@
     width: 50%; 
 }
 
-.explore{
+.side-panel-container{
     padding: 0 5% 0 2%;
     width: 37%;
 }
@@ -17,10 +17,10 @@
 @media screen and (max-width: 999px) {
 
     .sidebar{
-        width: 20%;
+        width: 20% !important;
     }
 
-    .explore{
+    .side-panel-container{
         display: none !important;
     }
 
@@ -36,4 +36,5 @@
     .feed{
         margin: 0;
     }
+
 }
