--- a/src/components/SidePanel/SidePanel.css
+++ b/src/components/SidePanel/SidePanel.css
@@ -1,18 +1,18 @@
-.explore-panel{
+.side-panel{
     /* box-shadow: 0 0 5px 0 #00000022; */
     border-radius: 16px;
-    width: 100%
-}
-
-.explore-panel ul{
     width: 100%;
 }
 
-.explore-panel-item{
+.side-panel ul{
+    width: 100%;
+}
+
+.side-panel-item{
     border: none;
     padding: 10px 16px;
 }
 
-.explore-panel-item-content{
+.side-panel-item-content{
     width: 100%;
 }
